# WarehouseBot

./: .env.example  .gitignore  Dockerfile.backend  PROJECT.md  create_admin.py  dev.sh  docker-compose.yml  fix_debt.py  fix_stuck_orders.py  fix_stuck_orders_today.py  main.py  normalize_enums.py  patch_i18n.py  patch_i18n_tg.py  private_key.pem  public_key.pem  pyproject.toml  test_kb.py  test_return.py  update_owner_credentials.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 218e76580f14_add_order_notifications_table.py  21a7a3b36c8e_initial_tables.py  25444190f66e_increase_stock_movements_enum_length.py  2fa9d4979088_add_supplier_returns.py  304510b3af0a_add_supplier_tables.py  31f8493b1970_add_batch_id_to_orders.py  39edb0dca9b1_add_email_and_password_to_user.py  418c14b77d9a_add_return_pending_to_order_status.py  5b7c2d9a1e33_add_partner_two_way_operations.py  63ccf976ab61_add_display_transfer_stock_receive_enum.py  6d86d3d24828_add_main_warehouse_and_fix_enums.py  72e9b8f4c1a2_add_product_store_price.py  7c8a5d1ef9ab_add_brand_to_products.py  8c2e7bb8f5c1_add_sales_and_display_inventory.py  8c65a0f67c21_add_sold_and_returned_to_order_status.py  9b3d2c4f1a90_drop_products_brand_default.py  a8f3c2e91b47_add_system_settings.py  b750b0983bdf_add_pushsubscription_model.py  b87f87dd2c01_composite_unique_sku_brand.py  b8d9c1a7e2f0_normalize_enum_values_lowercase.py  b9aacd02643f_add_invite_codes.py  c41c7d2b8e31_add_brands_catalog.py  d2e7f4a91c3b_add_refresh_sessions_table.py  (+3 more)
app/api/: app.py
tests/: test_fixes.py  test_web_order_actions.py
(+132 files in other folders)
