[project]
name = "warehouse-bot"
version = "0.1.0"
description = "Telegram mini-ERP bot for warehouse and store management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "apscheduler>=3.11.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.27",
    "aiohttp-socks>=0.11.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
